feat: add date range picker component and integrate with filters
- Added a new DateRangePicker component for selecting start and end dates.
- Updated customer fetching logic to include search functionality.
- Enhanced order fetching logic to support additional filters including payment method, payment status, and city.
- Introduced new CSS class for hiding scrollbars.
- Updated package.json to include new dependencies: @mui/x-date-pickers and antd.
- Refactored OrderListTable to incorporate date range filtering and improved filter handling.
- Cleaned up API utility to switch between production and local environments.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,6 +50,14 @@ ul:not([class]) {
   padding-inline-start: 40px;
 }
 
+.no-scrollbar{
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.no-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
 /*! Do not remove the following styles */
 /*
   Fix the popout / submenu closing issue when using hover trigger to open the menu and using
